# Medical-image-processing-platform-based-on-VTK

./: CMakeLists.txt  main.cxx  mainwindow.cxx  mainwindow.h  mainwindow.ui
